# AiZavr

./: AiZavr_concept_v4.md  AiZavr_spec_v1.json  AiZavr_style_v1.md  README.md  index.html  package-lock.json  package.json  tree_AiZavr.txt
docs/: AiZavr_concept_v5.md  AiZavr_concept_v6.md  AiZavr_design_todo.md  AiZavr_session10_summary.md  AiZavr_session4_summary.md  AiZavr_session5_summary.md  AiZavr_session6_summary.md  AiZavr_session7_summary.md  AiZavr_session8_summary.md  AiZavr_session9_summary.md  AiZavr_spec_v1.json  AiZavr_spec_v10.json  AiZavr_spec_v7.json  AiZavr_spec_v8.json  AiZavr_spec_v9.json
src/: App.css  App.tsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_initial.sql  002_branch_navigation.sql  003_branch_navigation.sql  004_soft_delete.sql  005_markers.sql  006_notebooks.sql  007_dialog_tags.sql  008_node_plugin.sql  009_tags_dictionary.sql  010_node_user_id.sql  011_root_person.sql
src-tauri/src/: lib.rs  main.rs
src-tauri/src/artifacts/: mod.rs
src-tauri/src/compression/: mod.rs
src-tauri/src/config/: mod.rs
src-tauri/src/db/: mod.rs
src-tauri/src/keychain/: mod.rs
src-tauri/src/llm/: mod.rs  openrouter.rs
src-tauri/src/markers/: mod.rs
src-tauri/src/notebooks/: mod.rs
src-tauri/src/tree/: mod.rs
src/components/: MenuBar.tsx  NotebooksPanel.tsx
src/dialog/: ArtifactPlaque.tsx  DialogView.tsx  MediaKindIcon.tsx  TagsEditor.tsx  TreeCanvas.tsx  artifactMedia.ts  buildLlmMessages.ts  clipboard.ts  hydrateLlmMessages.ts  types.ts  useDialogController.ts  useDialogScroll.ts
src/i18n/: index.ts
src/i18n/locales/: en.json  ru.json
src/renderers/: MessageContent.tsx
src/renderers/base/: parser.ts  segments.tsx
src/renderers/host/: modelApplicable.ts  registry.ts  types.ts
src/settings/: metricsSetting.ts  showUnansweredSetting.ts
src/widgets/compression/: index.ts
src/widgets/compressor/: buildTranscript.ts  i18n.ts  index.ts  prompts.ts  settings.ts
src/widgets/context-meter/: i18n.ts  index.ts
src/widgets/gemini/: api.ts  i18n.ts  index.ts
src/widgets/host/: FormModal.tsx  WidgetHost.tsx  WidgetPanel.tsx  capabilities.ts  controls.tsx  registry.ts  types.ts  widgetDispatch.ts
src/widgets/llm/: capabilities.ts  compressionRegistry.ts  extractMedia.ts  i18n.ts  mediaTypes.ts  outgoingMedia.ts  pluginSettings.ts  registry.ts  taggingRegistry.ts  types.ts
src/widgets/openrouter/: api.ts  i18n.ts  index.ts  settings.ts
src/widgets/save-dialog/: export.ts  i18n.ts  index.ts  pdf.ts
src/widgets/shared/: buildTranscript.ts
src/widgets/tagger/: i18n.ts  index.ts  prompts.ts  settings.ts
src/widgets/tree/: i18n.ts  index.ts
