[package]
name = "aizavr"
version = "0.1.0"
description = "AiZavr — branching LLM chat client with context compression"
authors = ["MrLUG67"]
edition = "2021"
license = "Apache-2.0"

[lib]
name = "aizavr_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }

# SQLite — async, compile-time checked queries
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "macros"] }

# System keychain for API keys storage
keyring = { version = "3", features = ["windows-native"] }

# UUID generation for tree nodes
uuid = { version = "1", features = ["v4", "serde"] }


